--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,6 +1,3 @@
-// Variables
-@import './variables';
-
 // Libraries
-@import '~bootstrap/scss/bootstrap.scss';
-@import '~slick-carousel/slick/slick.scss';
+@import '~tailwindcss/dist/tailwind.min.css';
+@import '~swiper/swiper.scss';
